# YoYoMath

./: .gitignore  CMakeLists.txt
src/Math/: Math.cpp  Math.h  MathTypes.cpp  MathTypes.h  MatrixTransform.cpp  MatrixTransform.h  Quaternion.cpp  Quaternion.h  Random.cpp  Random.h
src/Math/Geometry/: Ray.cpp  Ray.h
